--- a/assets/css/pages.scss
+++ b/assets/css/pages.scss
@@ -918,6 +918,7 @@
 			padding-bottom: 0;
 		}
 		a {
+			display: block;
 			color: $bl;
 			transition: all .2s linear;
 			&:hover {
@@ -1257,9 +1258,11 @@
 			margin-right: 20px;
 			transform: translateY(5px);
 		}
-		&:hover {
-			.vacancy__title {
-				color: $lbrown;
+		@media(min-width: 1025px) {
+			&:hover {
+				.vacancy__title {
+					color: $lbrown;
+				}
 			}
 		}
 		&.active {
@@ -1477,6 +1480,148 @@
 }
 /*========/supply=====*/
 
+/*======Product-card=======*/
+.product-card {
+	&__inner {
+		margin: 50px 0;
+		display: flex;
+		align-items: flex-start;
+	}
+	&__info {
+		width: 77%;
+		padding-right: 50px;
+	}
+	&__contact {
+		width: 23%;
+	}
+	&__text {
+		font-family: $ff;
+		font-size: 16px;
+		font-weight: 400;
+		color: $bl;
+		line-height: 1.5;
+		margin-bottom: 40px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+	&__list {
+		margin-bottom: 40px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+/*======/product-card=======*/
+
+/*======Contact-box====*/
+.contact-box {
+	padding: 30px;
+	border: 4px solid $lbrown;
+	&__title-main {
+		font-family: $ff;
+		font-size: 20px;
+		font-weight: 700;
+		color: $bl;
+		line-height: 1.5;
+		margin-bottom: 20px;
+	}
+	&__block {
+		padding: 20px 0;
+		border-top: 1px solid $op-brown;
+		&:last-child {
+			padding-bottom: 0;
+		}
+	}
+	&__title {
+		font-family: $ff;
+		font-size: 12px;
+		font-weight: 700;
+		color: $bl;
+		line-height: 1.5;
+		margin-bottom: 4px;
+	}
+	&__name {
+		font-family: $ff;
+		font-size: 12px;
+		font-weight: 400;
+		color: $bl;
+		line-height: 1.5;
+		margin-bottom: 10px;
+	}
+	&__item {
+		display: flex;
+		align-items: flex-start;
+		margin-bottom: 10px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+		span {
+			display: block;
+			font-family: $ff;
+			font-size: 12px;
+			font-weight: 400;
+			color: $bl;
+			line-height: 1.5;
+			transition: all .2s linear;
+		}
+		img {
+			display: block;
+			margin-right: 16px;
+			transform: translateY(2px);
+		}
+	}
+	a.contact-box__item {
+		&:hover {
+			span {
+				color: $lbrown;
+			}
+		}
+	}
+}
+/*======contact-box====*/
+
+/*=======Product-table======*/
+.product-table {
+	&__inner {
+		display: flex;
+		align-items: stretch;
+	}
+	&__col {
+		font-family: $ff;
+		font-size: 10px;
+		font-weight: 400;
+		line-height: 1.5;
+		padding: 10px 8px;
+		&_medium {
+			width: 6%;
+		}
+	}
+	&__columns {
+		width: 88%;
+		display: flex;
+		flex-wrap: wrap;
+		.product-table__col_medium {
+			width: 9%;
+		}
+	}
+	&__row {
+		font-family: $ff;
+		font-size: 10px;
+		font-weight: 400;
+		line-height: 1.5;
+		padding: 10px 8px;
+		text-align: center;
+		width: 100%;
+	}
+	&__group {
+		width: 82%;
+		display: flex;
+		flex-wrap: wrap;
+	}
+}
+/*=======/product-table======*/
+
 
 /*========Adaptive======*/
 @media(max-width: 1440px) {
@@ -1534,6 +1679,8 @@
 			}
 			.list-box {
 				margin-bottom: 30px;
+				margin-right: 0;
+				width: 100%;
 			}
 		}
 	}
@@ -1621,6 +1768,19 @@
 	}
 }
 @media(max-width: 992px) {
+	.product-card  {
+		&__inner {
+			display: block;
+		}
+		&__info {
+			width: 100%;
+			padding-right: 0;
+			margin-bottom: 40px;
+		}
+		&__contact {
+			width: 100%;
+		}
+	}
 	.article {
 		margin-bottom: 70px;
 		&__inner {
@@ -1676,6 +1836,25 @@
 		}
 		.title {
 			font-size: 30px;
+		}
+	}
+}
+@media(max-width: 992px) and (min-width: 600px){
+	.contact-box {
+		&__block {
+			display: flex;
+			align-items: flex-end;
+			>* {
+				width: calc(33.33333% - 20px);
+				margin-right: 20px;
+				margin-bottom: 0;
+				&:last-child {
+					margin-right: 0;
+				}
+			}
+		}
+		&__name {
+			margin-bottom: 0;
 		}
 	}
 }
@@ -1817,6 +1996,9 @@
 		.product-box {
 			height: 220px;
 			padding: 30px 20px;
+			&:hover {
+				height: 220px;
+			}
 			&__subtitle {
 				display: none;
 			}
@@ -2103,6 +2285,21 @@
 	.block-p {
 		padding: 40px 0;
 	}
+	.product-card {
+		&__inner {
+			margin: 30px 0;
+		}
+		&__text, &__list {
+			margin-bottom: 30px;
+		}
+		.list-dots {
+			li {
+				&.list-dots__title {
+					font-size: 16px;
+				}
+			}
+		}
+	}
 	.list-block {
 		&__col {
 			&:first-child {
@@ -2222,6 +2419,9 @@
 		}
 		.product-box {
 			height: 200px;
+			&:hover {
+				height: 200px;
+			}
 		}
 	}
 	.box-nav__mobile {
