--- a/assets/css/pages.scss
+++ b/assets/css/pages.scss
@@ -1482,6 +1482,7 @@
 
 /*======Product-card=======*/
 .product-card {
+	margin-bottom: 100px;
 	&__inner {
 		margin: 50px 0;
 		display: flex;
@@ -1583,22 +1584,56 @@
 
 /*=======Product-table======*/
 .product-table {
+	&__header {
+		background-color: $gray;
+		.product-table__line {
+			.product-table__col {
+				font-size: calc(2px + 3.5 * ((100vw - 320px) / (1170 - 320)));
+			}
+		}
+	}
 	&__inner {
 		display: flex;
 		align-items: stretch;
+		&_line {
+			position: relative;
+			&:after {
+				content: "";
+				width: 100%;
+				height: 1px;
+				background-color: $red;
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				z-index: 1;
+			}
+		}
+		>.product-table__col {
+			&:last-child {
+				border-right: none;
+			}
+		}
 	}
 	&__col {
 		font-family: $ff;
-		font-size: 10px;
+		font-size: calc(2px + 4 * ((100vw - 320px) / (1170 - 320)));
 		font-weight: 400;
 		line-height: 1.5;
 		padding: 10px 8px;
+		border-bottom: 1px solid rgba(43, 50, 60, 0.1);
+		border-right: 1px solid rgba(43, 50, 60, 0.1);
 		&_medium {
-			width: 6%;
+			width: 7%;
+		}
+		&_small {
+			width: 8.33333%;
+		}
+		&_big {
+			width: 21%;
 		}
 	}
 	&__columns {
-		width: 88%;
+		width: 72%;
 		display: flex;
 		flex-wrap: wrap;
 		.product-table__col_medium {
@@ -1607,31 +1642,311 @@
 	}
 	&__row {
 		font-family: $ff;
-		font-size: 10px;
+		font-size: calc(2px + 4 * ((100vw - 320px) / (1170 - 320)));
 		font-weight: 400;
 		line-height: 1.5;
 		padding: 10px 8px;
 		text-align: center;
 		width: 100%;
+		border-bottom: 1px solid rgba(43, 50, 60, 0.1);
+		border-right: 1px solid rgba(43, 50, 60, 0.1);
 	}
 	&__group {
 		width: 82%;
 		display: flex;
 		flex-wrap: wrap;
 	}
+	&__line {
+		width: 100%;
+		display: flex;
+		flex-wrap: nowrap;
+	}
+	&__content {
+		background-color: $wh;
+	}
 }
 /*=======/product-table======*/
 
+/*========Product-slider======*/
+.product-slider {
+	padding: 100px 0;
+	.container {
+		position: relative;
+	}
+	&__progress  {
+		display: none;
+  		width: 100%;
+  		height: 1px;
+  		overflow: hidden;
+  		background-color: $op-brown;
+  		background-image: linear-gradient(to right, $lbrown, $lbrown);
+  		background-repeat: no-repeat;
+  		background-size: 0 100%;
+  		margin: 0 10px;
+  		transition: background-size .4s ease-in-out;
+	}
+	&__sr-only {
+  		position: absolute;
+  		width: 1px;
+  		height: 1px;
+  		padding: 0;
+  		margin: -1px;
+  		overflow: hidden;
+  		clip: rect(0,0,0,0);
+  		border: 0;
+	}
+	&__slider {
+		margin-top: 50px;
+		display: flex;
+	}
+	&__slide {
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+	.product-box {
+		height: 220px;
+		padding: 30px;
+		&:hover {
+			height: 220px;
+			margin-top: 0;
+		}
+	}
+	.slick-list {
+		margin-right: -30px;
+		margin-bottom: -30px;
+	}
+	.slick-slide {
+		margin-right: 30px;
+		>div {
+			margin-bottom: 30px;
+		}
+	}
+	&__nav {
+		display: flex;
+		align-items: center;
+		@media(min-width: 769px) {
+			width: 37%;
+			margin: 30px auto 0;
+		}
+	}
+	&__arrow {
+		cursor: pointer;
+		position: absolute;
+		@include abs-centerY;
+		z-index: 1;
+		svg {
+			width: 60px;
+			height: 60px;
+			fill: $lbrown;
+			transition: all .2s linear;
+			opacity: 0.3;
+		}
+		&_prev {
+			left: -95px;
+		}
+		&_next {
+			right: -95px;
+			svg {
+				transform: rotate(180deg);
+			}
+		}
+		&:hover {
+			svg {
+				opacity: 1;
+			}
+		}
+	}
+}
+
+/*========/photo-slider======*/
+
+/*======Contact-page=======*/
+.contact-page {
+	padding-bottom: 100px;
+	&__inner {
+		display: flex;
+		margin-top: 50px;
+		margin-left: -30px;
+	}
+	&__col {
+		width: calc(50% - 30px);
+		margin-left: 30px;
+		margin-bottom: -30px;
+	}
+	&__box {
+		background-color: $gray;
+		padding: 30px;
+		margin-bottom: 30px;
+	}
+	&__title {
+		font-family: $ff;
+		font-size: 20px;
+		font-weight: 700;
+		color: $bl;
+		line-height: 1.5;
+		padding-bottom: 20px;
+		border-bottom: 1px solid $op-brown;
+		margin-bottom: 20px;
+	}
+	&__content {
+		padding-bottom: 20px;
+		border-bottom: 1px solid $op-brown;
+		margin-bottom: 20px;
+		&:last-child {
+			padding-bottom: 0;
+			border-bottom: none;
+			margin-bottom: 0;
+		}
+	}
+	&__item {
+		display: flex;
+		align-items: flex-start;
+		margin-bottom: 10px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+		img {
+			margin-top: 4px;
+			margin-right: 17px;
+		}
+		span, a {
+			display: block;
+			font-family: $ff;
+			font-size: 16px;
+			font-weight: 400;
+			color: $bl;
+			line-height: 1.5;
+			transition: all .2s linear;
+			&.contact-page__item-name {
+				font-weight: 700;
+			}
+			&.contact-page__item-line {
+				display: inline-block;
+				margin: 0 4px;
+			}
+		}
+		a {
+			display: inline-block;
+			&:hover {
+				color: $lbrown;
+			}
+		}
+	}
+	a.contact-page__item {
+		&:hover {
+			span {
+				color: $lbrown;
+			}
+		}
+	}
+}
+/*======//contact-page=======*/
+
+/*==========Address======*/
+.address {
+	.container {
+		height: 100%;
+		position: relative;
+	}
+	&-card {
+		background-color: $wh;
+		padding: 50px;
+		position: absolute;
+		top: 100px;
+		left: 20px;
+		z-index: 5;
+		width: calc(50% - 30px);
+		&__title-main {
+			font-family: $ff;
+			font-size: 16px;
+			font-weight: 700;
+			color: $bl;
+			line-height: 1.5;
+			margin-bottom: 20px;
+		}
+		&__block {
+			padding: 20px 0;
+			border-top: 1px solid $op-brown;
+			&:last-child {
+				padding-bottom: 0;
+			}
+		}
+		&__title {
+			font-family: $ff;
+			font-size: 16px;
+			font-weight: 700;
+			color: $bl;
+			line-height: 1.5;
+		}
+		&__info {
+			font-family: $ff;
+			font-size: 16px;
+			font-weight: 400;
+			color: $bl;
+			line-height: 1.5;
+			span {
+				font-weight: 700;
+			}
+			a {
+				color: $bl;
+				transition: all .2s linear;
+				&:hover {
+					color: $lbrown;
+				}
+			}
+		}
+	}
+	&-map {
+		&__content {
+			img {
+				width: 100%;
+				height: 850px;
+				object-fit: cover;
+				object-position: bottom  right;
+			}
+		}
+	}
+	&-logo {
+		display: block;
+		padding: 10px;
+		background-color: $wh;
+		position: absolute;
+		bottom: 390px;
+		right: 187px;
+		z-index: 1;
+		img {
+			width: 44.63px;
+			height: 49.09px;
+		}
+	}
+}
+/*==========/address======*/
+
 
 /*========Adaptive======*/
+@media(max-width: 1800px) {
+	.address {
+		&-map {
+			img {
+				object-position: bottom 0 right 40%;
+			}
+		}
+	}
+}
 @media(max-width: 1440px) {
-	.photo-slider {
+	.photo-slider, .product-slider {
 		padding: 80px 0 70px;
 		&__nav {
 			margin-top: 30px;
 			display: flex;
 		}
 		.progress {
+			display: block;
+		}
+		&__progress {
 			display: block;
 		}
 		&__arrow {
@@ -1661,6 +1976,15 @@
 					}
 				}
 			}
+		}
+	}
+	.address {
+		&-logo {
+			right: 15%;
+		}
+		&-card {
+			padding: 30px;
+			top: 80px;
 		}
 	}
 	.list-block {
@@ -1869,6 +2193,21 @@
 	.block-p {
 		padding: 70px 0;
 	}
+	.contact-page {
+		&__item {
+			span {
+				&.contact-page__item-line {
+					display: none;
+				}
+			}
+			a {
+				display: block;
+			}
+		}
+	}
+	.product-card {
+		margin-bottom: 80px;
+	}
 	.photo-slider {
 		.slick-list {
 			margin-right: -12px;
@@ -1991,6 +2330,9 @@
 	}
 }
 @media(max-width: 768px) {
+	.contact-page {
+		padding-bottom: 80px;
+	}
 	.production {
 		padding-bottom: 80px;
 		.product-box {
@@ -2002,6 +2344,18 @@
 			&__subtitle {
 				display: none;
 			}
+		}
+	}
+	.product-slider {
+		padding: 70px 0 80px;
+		.slick-list {
+			margin-right: -12px;
+		}
+		.slick-slide {
+			margin-right: 12px;
+		}
+		.product-box {
+			padding: 20px;
 		}
 	}
 	.testimonial {
@@ -2018,6 +2372,55 @@
 	}
 }
 @media(max-width: 765px) {
+	.address {
+		&-logo {
+			right: 30%;
+			bottom: 200px;
+		}
+		&-card {
+			position: static;
+			padding: 12px 0 0 0;
+			width: 100%;
+			margin-bottom: 50px;
+		}
+		&-map {
+			&__content {
+				img {
+					height: 500px;
+					object-position: bottom 0 right 25%;
+				}
+			}
+		}
+	}
+	.contact-page {
+		padding-bottom: 38px;
+		&__inner {
+			margin-top: 30px;
+			display: block;
+			margin-left: 0;
+		}
+		&__col {
+			width: 100%;
+			margin-left: 0;
+			margin-bottom: 0;
+		}
+		&__box {
+			margin-bottom: 12px;
+			padding: 20px;
+		}
+	}
+	.product-table {
+		&__col, &__row {
+			padding: 5px 2px;
+		}
+		&__inner {
+			&_line {
+				&:after {
+					height: 0.5px;
+				}
+			}
+		}
+	}
 	.photo-slider {
 		padding: 50px 0 40px;
 	}
@@ -2286,6 +2689,7 @@
 		padding: 40px 0;
 	}
 	.product-card {
+		margin-bottom: 50px;
 		&__inner {
 			margin: 30px 0;
 		}
@@ -2453,6 +2857,16 @@
 	}
 }
 @media(max-width: 414px) {
+	.product-slider {
+		padding: 30px 0 40px;
+		&__slider {
+			margin-top: 30px;
+		}
+		.slick-list {
+			padding-right: 8px;
+			margin-right: -20px;
+		}
+	}
 	.supply {
 		&__list {
 			li {
