--- a/assets/css/pages.scss
+++ b/assets/css/pages.scss
@@ -1512,6 +1512,12 @@
 			margin-bottom: 0;
 		}
 	}
+	&__table {
+		cursor: zoom-in;
+		img {
+			width: 100%;
+		}
+	}
 }
 /*======/product-card=======*/
 
@@ -1923,6 +1929,17 @@
 		}
 	}
 }
+.ymaps-2-1-79-balloon__content {
+	>* {
+		max-width: 220px;
+		min-height: 50px;
+	}
+}
+#map {
+	width: 100%;
+	height: 850px;
+}
+
 /*==========/address======*/
 
 
@@ -1962,6 +1979,13 @@
 					opacity: 0.3;
 				}
 			}
+		}
+	}
+}
+@media(max-width: 1275px) {
+	.address {
+		&-card {
+			left: 48px;
 		}
 	}
 }
@@ -2340,6 +2364,12 @@
 			padding: 30px 20px;
 			&:hover {
 				height: 220px;
+				&:after {
+					opacity: 0;
+				}
+				&:before {
+					opacity: 1;
+				}
 			}
 			&__subtitle {
 				display: none;
@@ -2390,6 +2420,9 @@
 					object-position: bottom 0 right 25%;
 				}
 			}
+		}
+		#map {
+			height: 500px;
 		}
 	}
 	.contact-page {
