--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3500,6 +3500,77 @@
     padding-right: 50%; } }
 
 /*========/adaptive======*/
+.photogallery {
+  margin-bottom: 100px; }
+  .photogallery__inner {
+    margin-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-bottom: -50px; }
+    .photogallery__inner > * {
+      width: calc(25% - 30px);
+      margin-left: 30px;
+      margin-bottom: 50px; }
+  .photogallery__photo {
+    cursor: -webkit-zoom-in;
+    cursor: zoom-in;
+    padding-bottom: 100%;
+    position: relative; }
+    .photogallery__photo img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+      object-fit: cover; }
+  .photogallery__btn {
+    margin-top: 50px; }
+
+/*============Adaptive===========*/
+@media (max-width: 992px) {
+  .photogallery__inner {
+    margin-left: -12px;
+    margin-bottom: -20px; }
+    .photogallery__inner > * {
+      width: calc(33.33333% - 12px);
+      margin-left: 12px;
+      margin-bottom: 20px; }
+  .photogallery__btn {
+    margin-top: 20px; } }
+
+@media (max-width: 540px) {
+  .photogallery {
+    margin-bottom: 50px; }
+    .photogallery__inner {
+      margin-top: 30px;
+      margin-bottom: -12px; }
+      .photogallery__inner > * {
+        width: calc(50% - 12px);
+        margin-bottom: 12px; } }
+
+@media (max-width: 375px) {
+  .photogallery__inner {
+    margin-left: 0; }
+    .photogallery__inner > * {
+      width: 100%;
+      margin-left: 0; }
+  .photogallery__btn {
+    width: 100%; }
+    .photogallery__btn .btn {
+      width: 100%; }
+      .photogallery__btn .btn span:first-child {
+        -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
+        text-align: center; } }
+
+/*============/adaptive===========*/
 /*Reset
 ===============*/
 * {
