--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3561,6 +3561,7 @@
       width: 100%;
       margin-left: 0; }
   .photogallery__btn {
+    margin-top: 30px;
     width: 100%; }
     .photogallery__btn .btn {
       width: 100%; }
