--- a/assets/css/photogallery.scss
+++ b/assets/css/photogallery.scss
@@ -16,6 +16,7 @@
 		cursor: zoom-in;
 		padding-bottom: 100%;
 		position: relative;
+		margin-bottom: 20px;
 		img {
 			position: absolute;
 			top: 0;
@@ -29,6 +30,28 @@
 	&__btn {
 		margin-top: 50px;
 	}
+	&__title {
+		font-family: $ff;
+		font-size: 20px;
+		font-weight: 700;
+		color: $bl;
+		line-height: 1.5;
+		margin-bottom: 10px;
+		a {
+			color: $bl;
+			transition: all .2s linear;
+			&:hover {
+				color: $lbrown;
+			}
+		}
+	}
+	&__description {
+		font-family: $ff;
+		font-size: 12px;
+		font-weight: 400;
+		color: $bl;
+		line-height: 1.5;
+	}
 }
 
 /*============Adaptive===========*/
@@ -36,11 +59,11 @@
 	.photogallery {
 		&__inner {
 			margin-left: -12px;
-			margin-bottom: -20px;
+			margin-bottom: -30px;
 			>* {
 				width: calc(33.33333% - 12px);
 				margin-left: 12px;
-				margin-bottom: 20px;
+				margin-bottom: 30px;
 			}
 		}
 		&__btn {
@@ -53,10 +76,8 @@
 		margin-bottom: 50px;
 		&__inner {
 			margin-top: 30px;
-			margin-bottom: -12px;
 			>* {
 				width: calc(50% - 12px);
-				margin-bottom: 12px;
 			}
 		}
 	}
