--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3519,7 +3519,8 @@
     cursor: -webkit-zoom-in;
     cursor: zoom-in;
     padding-bottom: 100%;
-    position: relative; }
+    position: relative;
+    margin-bottom: 20px; }
     .photogallery__photo img {
       position: absolute;
       top: 0;
@@ -3531,16 +3532,36 @@
       object-fit: cover; }
   .photogallery__btn {
     margin-top: 50px; }
+  .photogallery__title {
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    color: #2B323C;
+    line-height: 1.5;
+    margin-bottom: 10px; }
+    .photogallery__title a {
+      color: #2B323C;
+      -webkit-transition: all .2s linear;
+      -o-transition: all .2s linear;
+      transition: all .2s linear; }
+      .photogallery__title a:hover {
+        color: #BF9D77; }
+  .photogallery__description {
+    font-family: "Roboto", sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    color: #2B323C;
+    line-height: 1.5; }
 
 /*============Adaptive===========*/
 @media (max-width: 992px) {
   .photogallery__inner {
     margin-left: -12px;
-    margin-bottom: -20px; }
+    margin-bottom: -30px; }
     .photogallery__inner > * {
       width: calc(33.33333% - 12px);
       margin-left: 12px;
-      margin-bottom: 20px; }
+      margin-bottom: 30px; }
   .photogallery__btn {
     margin-top: 20px; } }
 
@@ -3548,11 +3569,9 @@
   .photogallery {
     margin-bottom: 50px; }
     .photogallery__inner {
-      margin-top: 30px;
-      margin-bottom: -12px; }
+      margin-top: 30px; }
       .photogallery__inner > * {
-        width: calc(50% - 12px);
-        margin-bottom: 12px; } }
+        width: calc(50% - 12px); } }
 
 @media (max-width: 375px) {
   .photogallery__inner {
