--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,7 @@
 @import 'pages.scss';
 @import 'photogallery.scss';
 @import 'production.scss';
+@import 'style-new.scss';
 
 /*Reset
 ===============*/
