--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1178,33 +1178,64 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
+    .breadcrumbs__links span {
+      color: #BBBDC0 !important; }
+    .breadcrumbs__links a {
+      font-family: "Roboto", sans-serif;
+      font-size: 12px;
+      font-weight: 400;
+      color: #2B323C;
+      line-height: 1.5;
+      -webkit-transition: all .2s linear;
+      -o-transition: all .2s linear;
+      transition: all .2s linear;
+      position: relative;
+      margin-right: 48px; }
+      .breadcrumbs__links a:hover {
+        color: #BF9D77; }
+      .breadcrumbs__links a:after {
+        content: "";
+        width: 1px;
+        height: 18px;
+        background-color: #2B323C;
+        opacity: 0.2;
+        -webkit-transform: rotate(-25.77deg) translateY(-50%);
+        -ms-transform: rotate(-25.77deg) translateY(-50%);
+        transform: rotate(-25.77deg) translateY(-50%);
+        position: absolute;
+        top: 50%;
+        right: -23.5px;
+        z-index: 1; }
   .breadcrumbs__item {
     display: inline-block;
     -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: flex-start;
-    margin-left: 48px;
     position: relative;
     -webkit-transition: all .2s linear;
     -o-transition: all .2s linear;
-    transition: all .2s linear; }
+    transition: all .2s linear;
+    /*&:before {
+			content: "";
+			width: 1px;
+			height: 18px;
+			background-color: $bl;
+			opacity: 0.2;
+			transform: rotate(-25.77deg) translateY(-50%);
+			position: absolute;
+			top: 50%;
+			left: -23.5px;
+			z-index: 1;
+		}*/
+    /*&:hover {
+			span {
+				color: $lbrown;
+			}
+		}*/ }
     .breadcrumbs__item:first-child {
       margin-left: 0; }
       .breadcrumbs__item:first-child:before {
         display: none; }
-    .breadcrumbs__item:before {
-      content: "";
-      width: 1px;
-      height: 18px;
-      background-color: #2B323C;
-      opacity: 0.2;
-      -webkit-transform: rotate(-25.77deg) translateY(-50%);
-      -ms-transform: rotate(-25.77deg) translateY(-50%);
-      transform: rotate(-25.77deg) translateY(-50%);
-      position: absolute;
-      top: 50%;
-      left: -23.5px;
-      z-index: 1; }
     .breadcrumbs__item span {
       font-family: "Roboto", sans-serif;
       font-size: 12px;
@@ -1214,8 +1245,6 @@
       -webkit-transition: all .2s linear;
       -o-transition: all .2s linear;
       transition: all .2s linear; }
-    .breadcrumbs__item:hover span {
-      color: #BF9D77; }
     .breadcrumbs__item.active span {
       color: #2B323C;
       opacity: 0.3; }
@@ -3187,12 +3216,14 @@
   .photo-slider {
     padding: 50px 0 40px; }
   .breadcrumbs__item {
-    display: none; }
+    display: inline-block; }
     .breadcrumbs__item_back {
       display: inline-block;
       margin-left: 0; }
       .breadcrumbs__item_back:before {
         display: none; }
+  .breadcrumbs__links a:first-child {
+    display: none; }
   .breadcrumbs__btn-home {
     display: none; }
   .breadcrumbs__btn-back {
@@ -3840,6 +3871,592 @@
     font-size: 24px; } }
 
 /*=========/adaptive=======*/
+.mb-50 {
+  margin-bottom: 50px; }
+
+.header-logo__title {
+  font-size: 29px; }
+  .header-logo__title span:first-child {
+    font-size: 29px; }
+
+.header-social__icon_big {
+  width: auto;
+  padding: 3px 9px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .header-social__icon_big svg {
+    margin-right: 4px; }
+    .header-social__icon_big svg:last-child {
+      margin-right: 0; }
+
+.header-social__icon span {
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #fff;
+  line-height: 1.2;
+  white-space: nowrap; }
+
+@media (min-width: 1200px) {
+  .header-contact__items {
+    padding: 16px 32px;
+    background-color: #FBF7F1; } }
+
+.header-contact__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 14px; }
+  .header-contact__links a {
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.5;
+    color: #983031;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear;
+    position: relative;
+    margin-right: 35px; }
+    .header-contact__links a:last-child {
+      margin-right: 0; }
+    .header-contact__links a:after {
+      content: "";
+      width: 24px;
+      height: 1px;
+      background-color: #983031;
+      position: absolute;
+      bottom: -2px;
+      left: 0;
+      z-index: 1;
+      -webkit-transition: all .2s linear;
+      -o-transition: all .2s linear;
+      transition: all .2s linear; }
+    .header-contact__links a:hover {
+      color: #BF9D77; }
+      .header-contact__links a:hover:after {
+        background-color: #BF9D77; }
+
+.work .title-box {
+  margin-bottom: 50px; }
+
+.work__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: -30px; }
+  .work__inner > * {
+    margin-left: 30px; }
+
+.work__icon {
+  margin-bottom: 30px; }
+  .work__icon img {
+    width: 60px;
+    height: 60px; }
+
+.work__info {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #2B323C;
+  line-height: 1.5;
+  padding-top: 30px;
+  position: relative; }
+  .work__info:before {
+    content: "";
+    width: 100%;
+    height: 20px;
+    background: url("../images/icons/work-arrow.svg") right top no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1; }
+
+.work__item {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  max-width: 15.5%;
+  min-width: 11.25%; }
+  .work__item:first-child .work__info:before {
+    background: url("../images/icons/work-arrow_first.svg") left top no-repeat;
+    background-size: contain; }
+  .work__item:last-child .work__info:before {
+    background: url("../images/icons/work-arrow_last.svg") left top no-repeat;
+    background-size: contain; }
+
+/*=========Labor======*/
+.labor {
+  padding: 100px 0; }
+  .labor .slider-arrows {
+    position: absolute;
+    bottom: 0px;
+    right: 0;
+    z-index: 10; }
+  .labor .slick-dots {
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    bottom: 42px;
+    left: 30px;
+    z-index: 10; }
+    .labor .slick-dots button {
+      font-size: 0;
+      color: transparent;
+      width: 35px;
+      height: 1px;
+      background-color: #fff; }
+    .labor .slick-dots li {
+      margin-right: 10px; }
+      .labor .slick-dots li:last-child {
+        margin-right: 0; }
+      .labor .slick-dots li.slick-active button {
+        background-color: #BF9D77; }
+  .labor .btn {
+    margin-top: 30px; }
+  .labor__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .labor__info {
+    width: 50%;
+    padding-right: 50px; }
+  .labor__photo {
+    width: 50%;
+    position: relative; }
+  .labor__slider {
+    height: 100%; }
+  .labor__slide {
+    height: 100%; }
+  .labor .slick-slide > div {
+    height: 100%; }
+  .labor .slick-list, .labor .slick-track {
+    height: 100%; }
+  .labor__item {
+    position: relative;
+    min-height: 320px;
+    height: 100%;
+    cursor: pointer; }
+    .labor__item img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      -o-object-fit: cover;
+      object-fit: cover; }
+
+/*===/labor===*/
+/*=========Delivery==========*/
+.delivery {
+  position: relative;
+  z-index: 1; }
+  .delivery__map {
+    pointer-events: none;
+    width: 97%;
+    max-width: 1120px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    z-index: -1;
+    -webkit-transform: translate(-50%, -16%);
+    -ms-transform: translate(-50%, -16%);
+    transform: translate(-50%, -16%); }
+    .delivery__map img {
+      width: 100%; }
+  .delivery__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: -50px;
+    margin-bottom: -20px; }
+    .delivery__inner > * {
+      margin-left: 50px;
+      width: calc(33.33333% - 50px);
+      margin-bottom: 20px; }
+  .delivery__item {
+    padding: 30px 40px 10px;
+    background-color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .delivery__icon {
+    width: 60px;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 60px;
+    flex: 0 0 60px;
+    margin-right: 30px;
+    margin-bottom: 20px; }
+    .delivery__icon img {
+      width: 100%; }
+  .delivery__description {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    color: #2B323C;
+    line-height: 1.5;
+    margin-bottom: 20px; }
+
+/*=========/delivery==========*/
+/*==============Manufacture=========*/
+.manufacture {
+  padding-bottom: 100px; }
+  .manufacture__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-bottom: -50px; }
+    .manufacture__inner > * {
+      margin-left: 30px;
+      width: calc(20% - 30px);
+      margin-bottom: 50px; }
+    .manufacture__inner.line {
+      margin-bottom: 0; }
+      .manufacture__inner.line > * {
+        width: calc(100% - 30px);
+        margin-bottom: 0; }
+      .manufacture__inner.line .manufacture-box {
+        padding-top: 16px;
+        padding-bottom: 8px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        padding-right: 270px; }
+        .manufacture__inner.line .manufacture-box__photo {
+          display: none; }
+        .manufacture__inner.line .manufacture-box__title {
+          margin-bottom: 8px;
+          margin-right: 20px;
+          -webkit-box-ordinal-group: 0;
+          -ms-flex-order: -1;
+          order: -1; }
+        .manufacture__inner.line .manufacture-box__link {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex; }
+  .manufacture-box {
+    display: block;
+    padding-bottom: 16px;
+    border-bottom: 1px solid rgba(191, 157, 119, 0.3); }
+    .manufacture-box:hover {
+      border-color: #983031; }
+      .manufacture-box:hover .manufacture-box__title {
+        color: #983031; }
+      .manufacture-box:hover .manufacture-box__link span {
+        color: #983031; }
+      .manufacture-box:hover .manufacture-box__link svg {
+        fill: #983031; }
+    .manufacture-box__photo {
+      margin-bottom: 10px; }
+      .manufacture-box__photo img {
+        width: 100%;
+        height: 140px;
+        -o-object-fit: cover;
+        object-fit: cover; }
+    .manufacture-box__description {
+      font-family: "Roboto", sans-serif;
+      font-size: 12px;
+      font-weight: 400;
+      color: #2B323C;
+      opacity: 0.5;
+      line-height: 1.5;
+      margin-bottom: 8px; }
+    .manufacture-box__title {
+      font-family: "Roboto", sans-serif;
+      font-size: 16px;
+      font-weight: 700;
+      color: #2B323C;
+      line-height: 1.5; }
+    .manufacture-box__link {
+      display: none;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      margin-bottom: 8px;
+      margin-left: auto; }
+      .manufacture-box__link span {
+        font-family: "Roboto", sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        color: #BF9D77;
+        line-height: 1.5;
+        display: inline-block;
+        margin-right: 10px; }
+      .manufacture-box__link svg {
+        width: 16px;
+        height: 16px;
+        fill: #BF9D77; }
+  .manufacture .title-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+  .manufacture-filter {
+    margin: 50px 0; }
+    .manufacture-filter__inner {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      margin-bottom: -20px;
+      margin-right: -20px; }
+    .manufacture-filter__item {
+      margin-right: 20px;
+      margin-bottom: 20px; }
+      .manufacture-filter__item:last-child {
+        margin-right: 0; }
+      .manufacture-filter__item label {
+        background-color: #F9F9F9;
+        padding: 12px 24px;
+        font-family: "Roboto", sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        color: #2B323C;
+        line-height: 1.5;
+        -webkit-transition: all .2s linear;
+        -o-transition: all .2s linear;
+        transition: all .2s linear;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        cursor: pointer; }
+      .manufacture-filter__item input {
+        display: none; }
+        .manufacture-filter__item input:checked + label {
+          color: #fff;
+          background-color: #BF9D77; }
+    .manufacture-filter .btn {
+      display: none;
+      width: 100%; }
+      .manufacture-filter .btn span:first-child {
+        text-align: center;
+        -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto; }
+
+/*==============/manufacture=========*/
+/*===========View-btn===========*/
+.view-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .view-btn a {
+    width: 40px;
+    height: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background-color: rgba(43, 50, 60, 0.1);
+    margin-right: 10px;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear; }
+    .view-btn a:last-child {
+      margin-right: 0; }
+    .view-btn a svg {
+      width: 20px;
+      height: 20px;
+      fill: #2B323C;
+      -webkit-transition: all .2s linear;
+      -o-transition: all .2s linear;
+      transition: all .2s linear; }
+    .view-btn a.active {
+      background-color: #BF9D77; }
+      .view-btn a.active svg {
+        fill: #fff; }
+
+/*===========/view-btn===========*/
+/*===========Adaptive============*/
+@media (max-width: 1200px) {
+  .header-contact__links {
+    display: none; }
+  .work__inner {
+    display: block;
+    margin-left: 0; }
+    .work__inner > * {
+      margin-left: 0; }
+  .work__icon {
+    margin-bottom: 0;
+    margin-right: 30px; }
+    .work__icon img {
+      width: 50px;
+      height: 50px; }
+  .work__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 100%;
+    min-width: auto;
+    max-width: 100%;
+    margin-bottom: 20px; }
+    .work__item:last-child {
+      margin-bottom: 0; }
+    .work__item:first-child .work__info:before {
+      background: url("../images/icons/work-arrow-down_first.svg") left top no-repeat;
+      background-size: contain; }
+    .work__item:last-child .work__info:before {
+      background: url("../images/icons/work-arrow-down_last.svg") left top no-repeat;
+      background-size: contain; }
+  .work__info {
+    padding-top: 0;
+    padding-left: 30px; }
+    .work__info:before {
+      width: 10px;
+      height: 50px;
+      background: url("../images/icons/work-arrow-down.svg") left top no-repeat;
+      background-size: contain;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%); }
+  .delivery__map {
+    width: 120%; }
+  .delivery__inner {
+    margin-left: -30px; }
+    .delivery__inner > * {
+      margin-left: 30px;
+      width: calc(33.33333% - 30px); }
+  .delivery__item {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .manufacture__inner {
+    margin-left: -12px; }
+    .manufacture__inner > * {
+      width: calc(25% - 12px);
+      margin-left: 12px; } }
+
+@media (max-width: 992px) {
+  .labor {
+    padding: 70px 0; }
+    .labor__inner {
+      display: block; }
+    .labor__info {
+      width: 100%;
+      padding-right: 0;
+      padding-bottom: 50px; }
+    .labor__photo {
+      height: 720px;
+      width: 100%; }
+  .manufacture__inner.line .manufacture-box {
+    padding-right: 0; } }
+
+@media (max-width: 768px) {
+  .delivery__map {
+    -webkit-transform: translate(-50%, -10%);
+    -ms-transform: translate(-50%, -10%);
+    transform: translate(-50%, -10%); }
+  .delivery__description {
+    font-size: 16px; }
+  .manufacture {
+    padding-bottom: 80px; }
+    .manufacture__inner > * {
+      width: calc(33.33333% - 12px); }
+    .manufacture__inner.line .manufacture-box {
+      padding-right: 0;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+      .manufacture__inner.line .manufacture-box__description {
+        width: 100%;
+        -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+        order: 1; } }
+
+@media (max-width: 765px) {
+  .delivery__inner {
+    display: block;
+    margin-left: 0; }
+    .delivery__inner > * {
+      width: 100%;
+      margin-left: 0; }
+  .delivery__item {
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    padding: 20px 20px 0; }
+  .manufacture .title-box {
+    margin-bottom: 30px; } }
+
+@media (max-width: 546px) {
+  .header-logo__title {
+    font-size: 29px; }
+    .header-logo__title span:first-child {
+      font-size: 17px; }
+  .labor {
+    padding: 40px 0 50px; }
+    .labor__info {
+      padding-bottom: 30px; }
+    .labor__photo {
+      height: 280px; }
+  .manufacture {
+    padding-bottom: 50px; }
+    .manufacture-filter {
+      margin: 30px 0; }
+      .manufacture-filter__inner {
+        margin-bottom: -8px;
+        margin-right: -12px; }
+      .manufacture-filter__item {
+        margin-right: 12px;
+        margin-bottom: 8px; }
+        .manufacture-filter__item label {
+          font-size: 12px;
+          padding: 8px 16px; }
+    .manufacture__inner > * {
+      width: calc(50% - 12px); }
+    .manufacture__inner.line .manufacture-box__title {
+      font-size: 16px; }
+    .manufacture__inner.line .manufacture-box__link {
+      width: 100%;
+      -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+      order: 1; }
+    .manufacture-box__title {
+      font-size: 12px; } }
+
+@media (max-width: 375px) {
+  .manufacture .title {
+    font-size: 24px; } }
+
+/*===========/adaptive============*/
 /*Reset
 ===============*/
 * {
